# instagram-tui

./: .gitignore  CLAUDE.md  Cargo.toml  bridge.py  pyproject.toml
instagram_tui/: __main__.py  app.py  client.py  config.py
instagram_tui/screens/: dm_list.py  dm_thread.py  login.py  notes.py
src/: api.rs  config.rs  main.rs  tui.rs
