[package]
name = "instagram-tui"
version = "0.1.0"
edition = "2021"
description = "Write-only Instagram TUI — notes and DMs from the terminal"

[[bin]]
name = "inote"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
directories = "6.0"
ratatui = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tui-textarea = "0.7"

[dev-dependencies]
tempfile = "3"
